[package]
name = "gnn"
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = ""
repository = "https://github.com/anthonwellsjo/gnn"
keywords = ["cli", "todo", "gnn", "minimal", "bash_life"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arw_brr = {path= "../arw_brr"}
dirs = "4.0.0"
reqwest = "0.11.14"
rusqlite = "0.28.0"
tokio = "1.25.0"

[dev-dependencies]
rand = "0.8.5"
