[package]
name = "gnn"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = ""
repository = "https://github.com/anthonwellsjo/gnn"
keywords = ["cli", "todo", "gnn", "minimal", "bash_life"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rusqlite = "0.28.0"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
arw_brr = {path="../arw_brr"}
open = "3.2.0"
arboard = "3.2.0"
chrono = "0.4.23"

[dev-dependencies]
rand = "0.8.5"
